Fix disk image dialog on mobile; add ctrl button and ctrl lock

--- a/src/App.css
+++ b/src/App.css
@@ -111,13 +111,29 @@ body {
   cursor: default;
 }
 
-.isButtonActive {
+.key-button {
+  border-width: 1px;
+  border-style: outset;
+}
+
+.button-active {
   background-color: #898677;
 }
 
-.keyButton {
-  border-width: 1px;
-  border-style: outset;
+.button-locked {
+  background-color: #898677;
+  position: relative;
+}
+
+.button-locked::after {
+  content: "";
+  width: 5px;
+  height: 5px;
+  background-color: #aaff00;
+  border-radius: 50%;
+  position: absolute;
+  top: 3px;
+  left: 3px;
 }
 
 .text-button {
@@ -132,13 +148,13 @@ body {
   cursor: pointer;
 }
 
-.textKey {
+.text-key {
   font-size: medium;
-  letter-spacing: -0.05em;
+  letter-spacing: -0.03em;
   font-weight: 600;
   position: relative;
-  top: -0.0em;
-  left: -0.00em;
+  top: 0;
+  left: 0;
 }
 
 .defaultFont {
